# c2rust-clean

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: config.rs  config_helper.rs  error.rs  executor.rs  git_helper.rs  main.rs
tests/: integration_test.rs
