[package]
name = "c2rust-clean"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2rust-clean"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json = "1"
