[package]
name = "c2rust-clean"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "c2rust-clean"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"
chrono = "0.4"
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
