[package]
name = "c2rust-clean"
version = "0.1.0"
edition = "2021"
description = "A command-line tool for cleaning C project build artifacts in c2rust workflow"
license = "MIT"
repository = "https://github.com/LuuuXXX/c2rust-clean"
authors = ["LuuuXXX"]
keywords = ["c2rust", "build", "clean", "c-projects"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[[bin]]
name = "c2rust-clean"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
git2 = "0.19"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
